--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,2 +1,2 @@
-<h1 th:text="${question:subject}"></h1>
-<div th:text="${question.content}"></div>
+<h1 th:text="${question.subject}">1</h1>
+<div th:text="${question.content}">2</div>
