--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <!-- 답 변 의 갯 수 표 시 -->
-    <h5 class="border-bottom my-3 py-2" th:text="|${#lists.size(question.answerList)}개 의 답 변 이 있 습 니 다.|"></h5>
+    <h5 class="border-bottom my-3 py-2" th:text="|${#lists.size(question.answerList)}개의 답변이 있습니다.|"></h5>
     <!-- 답 변 반 복 시 작 -->
     <div class="card my-3" th:each="answer : ${question.answerList}">
         <div class="card-body">
@@ -39,6 +39,12 @@
                     <div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
             </div>
+            <div class="my-3">
+                <a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"
+                   sec:authorize="isAuthenticated()"
+                   th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
+                   th:text="수정"></a>
+            </div>
         </div>
     </div>
     <!-- 답 변 반 복 끝 -->
@@ -48,14 +54,14 @@
         <textarea sec:authorize="isAnonymous()" disabled th:field="*{content}" class="form-control"
                   rows="10"></textarea>
         <textarea sec:authorize="isAuthenticated()" th:field="*{content}" class="form-control" rows="10"></textarea>
-        <input type="submit" value="답 변 등 록" class="btn btn-primary my-2">
+        <input type="submit" value="답변 등록" class="btn btn-primary my-2">
     </form>
 </div>
 <script layout:fragment="script" type='text/javascript'>
     const delete_elements = document.getElementsByClassName("delete");
     Array.from(delete_elements).forEach(function(element) {
         element.addEventListener('click', function() {
-            if(confirm("정 말 로 삭 제 하 시 겠 습 니 까?")) {
+            if(confirm("정말로 삭제하시겠습니까?")) {
                 location.href = this.dataset.uri;
             };
         });
