--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -13,8 +13,11 @@
     <title>Hello, sbb!</title>
 </head>
 <body>
+<nav th:replace="~{navbar :: fragment}"></nav>
 <!-- 기 본 템 플 릿 안 에 삽 입 될 내 용 Start -->
 <th:block layout:fragment="content"></th:block>
 <!-- 기 본 템 플 릿 안 에 삽 입 될 내 용 End -->
+<!-- 부트스트랩 js -->
+<script th:src="@{/bootstrap.min.js}"></script>
 </body>
 </html>
