--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -13,7 +13,7 @@
     <title>Hello, sbb!</title>
 </head>
 <body>
-<nav th:replace="~{navbar :: fragment}"></nav>
+<nav th:replace="~{navbar :: navbarFragment}"></nav>
 <!-- 기 본 템 플 릿 안 에 삽 입 될 내 용 Start -->
 <th:block layout:fragment="content"></th:block>
 <!-- 기 본 템 플 릿 안 에 삽 입 될 내 용 End -->
