--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -26,6 +26,7 @@
             </li>
             <li class="page-item"
                 th:each="page : ${#numbers.sequence(0, paging.totalPages - 1)}"
+                th:if="${page >= paging.number - 5 and page <= paging.number + 5}"
                 th:classappend="${page == paging.number} ? 'active'">
                 <a class="page-link" th:href="@{|?page=${page}|}" th:text="${page}"></a>
             </li>
