--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -10,7 +10,7 @@
         </thead>
         <tbody>
         <tr th:each="question, loop : ${paging}">
-            <td th:text="${loop.count}"></td>
+            <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
             <td>
                 <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
             </td>
@@ -31,7 +31,7 @@
                 <a class="page-link" th:href="@{|?page=${page}|}" th:text="${page}"></a>
             </li>
             <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
-                <a class="page-link" href="@{|?page=${paging.number+1}|}">Next</a>
+                <a class="page-link" th:href="@{|?page=${paging.number+1}|}">Next</a>
             </li>
         </ul>
     </div>
