--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -29,7 +29,8 @@
     <!-- 답 변 작 성 -->
     <form th:action="@{|/answer/create/${question.id}|}" th:object="${answerForm}" method="post" class="my-3">
         <div th:replace="~{form_errors :: formErrorsFragment}"></div>
-        <textarea th:field="*{content}" rows="10" class="form-control"></textarea>
+        <textarea th:field="*{content}" sec:authorize="isAnonymous()" disabled rows="10" class="form-control"></textarea>
+        <textarea th:field="*{content}" sec:authorize="isAuthenticated()" rows="10" class="form-control"></textarea>
         <input type="submit" value="답 변 등 록" class="btn btn-primary my-2">
     </form>
 </div>
