--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,5 +19,8 @@
 <!-- 기 본 템 플 릿 안 에 삽 입 될 내 용 End -->
 <!-- 부트스트랩 js -->
 <script th:src="@{/bootstrap.min.js}"></script>
+<!-- 자바스크립트 start -->
+<th:block layout:fragment="script"></th:block>
+<!-- 자바스크립트 end -->
 </body>
 </html>
