--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -14,13 +14,13 @@
                 </div>
             </div>
             <div class="my-3">
-                <a th:href="@{|/question/modify/${question.id}|}" class="btn btn-primary"
+                <a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm btn-outline-secondary"
                    sec:authorize="isAuthenticated()"
                    th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
                    th:text="수정하기"></a>
-                <a href="javascript:void(0);" class="delete btn btn-primary"
+                <a href="javascript:void(0);" class="delete btn btn-sm btn-outline-secondary"
                    th:data-uri="@{|/question/delete/${question.id}|}"
-                   sec:authrize="isAuthenticated()"
+                   sec:authorize="isAuthenticated()"
                    th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
                    th:text="삭제하기"></a>
             </div>
