--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -39,6 +39,7 @@
     <h5 class="border-bottom my-3 py-2" th:text="|${#lists.size(question.answerList)}개 의 답 변 이 있 습 니 다.|"></h5>
     <!-- 답 변 반 복 시 작 -->
     <div class="card my-3" th:each="answer : ${question.answerList}">
+        <a th:id="|answer_${answer.id}|"></a>
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
             <div class="d-flex justify-content-end">
